--- a/resp.css
+++ b/resp.css
@@ -3,7 +3,7 @@
     .navbar {
         flex-direction: column;
         padding: 15px;
-        height: 10%;
+        height: 60px;
         width: 500px;
     }
 
